--- a/example/index.html
+++ b/example/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 	<head>
 		<link href="javascript.en.json" lang="en" rel="gettext" />
@@ -74,7 +75,7 @@ Removing temp files
 }
 </pre>
 	</body>
-	<script type="text/javascript" src="jquery/jquery.js"></script>
-	<script type="text/javascript" src="jquery/jquery.gettext.js"></script>
+	<script type="text/javascript" src="jquery.js"></script>
+	<script type="text/javascript" src="../jquery/jquery.gettext.js"></script>
 	<script type="text/javascript" src="test.js"></script>
 </html>
