remastered + node.js support

--- a/example/index.html
+++ b/example/index.html
@@ -76,6 +76,6 @@ Removing temp files
 </pre>
 	</body>
 	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="../jquery/jquery.gettext.js"></script>
+	<script type="text/javascript" src="../index.js"></script>
 	<script type="text/javascript" src="test.js"></script>
 </html>
